<?xml version="1.0"?>
<package format="3">
  <name>human_detector</name>
  <version>0.0.0</version>
  <description>Detect humans that moved using map + scan + Nav2</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>nav2_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>navigation</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

